Fix newly introduced memory leaks from GeglMatrix type change

Introduced in ffe0549a8c64172c28fe16b8c48d1ee967b87b99
https://bugzilla.gnome.org/show_bug.cgi?id=645817#c3